chore: Move WEBHOOK_URL to .env

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ DOCKER_USER=root
 DOCKER_PASSWORD=your_password_here
 N8N_CONTAINER_NAME=n8n
 N8N_VOLUME_PATH=/media/data/docker/volumes/n8n_data/_data
+WEBHOOK_URL=https://your-n8n-domain.com
