feat: Add Groups node and searchable dropdowns with secondary info
- Add PlanningCenterGroups node with Group, Group Type, Membership, and Event resources
- Display secondary info in dropdown names for better identification:
  - People: age, membership status, child indicator
  - Workflows: ready/snoozed card counts
  - Groups: member count, archived status
  - Group Types: group count
  - Service Types: frequency, last plan date
  - Check-In Events: frequency, archived status

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 			"dist/nodes/PlanningCenter/PlanningCenterPeople.node.js",
 			"dist/nodes/PlanningCenter/PlanningCenterServices.node.js",
 			"dist/nodes/PlanningCenter/PlanningCenterCheckIns.node.js",
+			"dist/nodes/PlanningCenter/PlanningCenterGroups.node.js",
 			"dist/nodes/PlanningCenter/PlanningCenterTrigger.node.js",
 			"dist/nodes/Clearstream/Clearstream.node.js",
 			"dist/nodes/Clearstream/ClearstreamTrigger.node.js"
